# mini-harness

./: .env.example  .gitignore  README.md  harness.json.example  pyproject.toml
docs/: ARCHITECTURE.md
examples/: smoke.jsonl
harness/: __init__.py  __main__.py  actions.py  agent.py  cli.py  config.py  context.py  doctor.py  eval_runner.py  init_project.py  messages.py  planning.py  schema.py  server.py
harness/models/: __init__.py  base.py  mock.py  openai_compatible.py  providers.py
harness/prompts/: system.md
harness/runtime/: __init__.py  approval.py  change_tracker.py  checkpoint.py  eval_store.py  executor.py  logger.py  policy.py  run_config.py  run_store.py  task_queue.py  task_store.py  workspace.py
harness/tools/: __init__.py  base.py  file_tools.py  git_tools.py  shell_tools.py
tests/: test_agent.py  test_change_tracker.py  test_checkpoint.py  test_cli.py  test_config.py  test_context.py  test_doctor.py  test_eval_runner.py  test_eval_store.py  test_init_project.py  test_logger.py  test_mock_loop.py  test_packaging.py  test_planning.py  test_project_files.py  test_run_config.py  test_schema.py  test_server.py  test_streaming.py  test_task_queue.py  test_task_store.py  test_workspace_and_tools.py
